			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

================================
VERSION 5.6.2 (January 13, 2006)
================================

  * FIXED: writing of escape sequences for representation_errors(prolog)
    on streams.  Also fixed reading of '\x61\' and similar sequences.
    Pierre Nugues.

  * FIXED: Make thread time statistics work properly in Linux 2.6 kernels.
    Also some cleanup of the statistics code.

  * FIXED: Bind prolog flag system_thread_id to the thread identifier on
    Linux in 2.6 kernels.

  * FIXED: readline signal interaction (causes problems in alarm/4).

  * FIXED: Bug#134: left-shift (<<) hitting 64-bit boundary.  Holger
    Kanwischer.

  * FIXED: Bug#133: reading non-decimal numbers that do not fit in 64-bit.
    Holger Kanwischer.

  * FIXED: Bug#132: radix domain checking for format/3 using ~r.
    Holger Kanwischer.

================================
VERSION 5.6.1 (January 10, 2006)
================================

  * CLEANUP: Various type issues.  Peter Ludemann.

  * FIXED: Bug#131: error handling in lock-option of open/4.
    Holger Kanwischer.

  * FIXED: stream_property(X, alias(A)) for standard streams.  Paulo Moura.

  * FIXED: Bug#130: Prolog arithmetic functions using rationals.  Koos Dering.

  * FIXED: Online manual index handling (double 'Overview').   
    Pierpaolo BERNARDI.

  * FIXED: expand_term/2 bypass expansion for variables.  Paulo Moura.

=================================
VERSION 5.6.0 (December 22, 2005)
=================================

  * FIXED: Float/integer indexing problems that can cause both slow access
    and much too large datastructures for the index.

  * PORT: pl-stream.h: avoid 'new' (work around MSVC 7 bug).  Alan Baljeu.
